fixed mobile menu overflow

--- a/src/input.css
+++ b/src/input.css
@@ -255,4 +255,5 @@ html.overflow-hidden {
   
   body {
     height: 100%;
+    overflow:hidden;
   }
